tests/errors/syntax.MissingClosingBracket.art
print "done"
print [
    this
    is
    a
    block